2001-05-28  Jeff Sturm  <jsturm@one-point.com>

	* config/tc-sparc.c (md_apply_fix3): Handle BFD_RELOC_SPARC_UA16,
	BFD_RELOC_SPARC_UA32 and BFD_RELOC_SPARC_UA64.
	(tc_gen_reloc): Likewise.
	(sparc_cons_align): Don't clear sparc_no_align_cons.
	(cons_fix_new_sparc): Substitute BFD_RELOC_SPARC_UA{16|32|64} for 
	BFD_RELOC_{16|32|64} iff sparc_no_align_cons is set.

2001-05-27  Alan Modra  <amodra@one.net.au>

	* write.c (relax_segment <rs_space>): Check the section of a
	symbol to determine whether it is absolute rather than comparing
	its frag against zero_address_frag as listings play tricks with
	frags.

	* config/tc-m68k.c (md_assemble): Ensure variable part of frag is
	allocated in the same chunk as the fixed part.

2001-05-26  Alan Modra  <amodra@one.net.au>

	* write.c (relax_segment <rs_space>): Calculate growth using
	addresses before stretch.  Prevent repeated error messages.
	From Peter Jakubek  <pjak@snafu.de>
	Use as_bad_where and as_warn_where to pinpoint errors.

2001-05-25  Alan Modra  <amodra@one.net.au>

	* symbols.c (resolve_symbol_value): Always set segment, even when
	not finalizing symbol value.

	* config/obj-ieee.c (write_object_file): Set finalize_syms.
	* config/obj-coff.c (write_object_file): Likewise.
	* (size_section): Remove rs_space assert as fr_symbol is no longer
	removed.
	(fill_section): Likewise.

	* configure.in: Replace linuxoldld with linux*oldld.
	* configure: Regenerate.

	From 2.11 branch 2001-03-30  Richard Henderson  <rth@redhat.com>
	* config/tc-i386.c (md_convert_frag): Don't die on local symbols
	that have been finalized.

	* symbols.c (resolve_symbol_value): Clear sy_resolving before
	taking exit_dont_set_value.

	* write.c (relax_segment <rs_space>): Don't zap fr_symbol when
	relaxing.

2000-05-24  Tom Rix <trix@redhat.com>

	* config/obj-coff.c : (add_lineno) xcoff allows negative line
	numbers
	* config/tc-ppc.c (ppc_stabx) : fix generated symbol
	
2001-05-24  Alan Modra  <amodra@one.net.au>
